--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <section class="content">
 
         <!--Search Engine optimization article-->
-        <article class="article">
-            <img src="images/search-engine-optimization.jpg" class="float-left" />
+        <article id="search-engine-optimization" class="article">
+            <img src="images/search-engine-optimization.jpg" class="float-left" alt="search engine optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -42,8 +42,8 @@
         </article>
 
         <!--Online Reputation article-->    
-        <article class="article">
-            <img src="images/online-reputation-management.jpg" class="float-right" />
+        <article id="online-reputation-management" class="article">
+            <img src="images/online-reputation-management.jpg" class="float-right" alt=""/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -51,7 +51,7 @@
         </article>
 
         <!--Social Media Marketing article-->    
-        <article class="article">
+        <article id="social-media-marketing" class="article">
             <img src="images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
