--- a/index.html
+++ b/index.html
@@ -34,28 +34,37 @@
 
         <!--Search Engine optimization article-->
         <article id="search-engine-optimization" class="article">
-            <img src="images/search-engine-optimization.jpg" class="float-left" alt="search engine optimization"/>
+            <img src="images/search-engine-optimization.jpg" class="float-left"
+                alt="search engine optimization image" />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
         </article>
 
-        <!--Online Reputation article-->    
+        <!--Online Reputation article-->
         <article id="online-reputation-management" class="article">
-            <img src="images/online-reputation-management.jpg" class="float-right" alt=""/>
+            <img src="images/online-reputation-management.jpg" class="float-right"
+                alt="online reputation management image" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
         </article>
 
-        <!--Social Media Marketing article-->    
+        <!--Social Media Marketing article-->
         <article id="social-media-marketing" class="article">
-            <img src="images/social-media-marketing.jpg" class="float-left" />
+            <img src="images/social-media-marketing.jpg" class="float-left" 
+                alt="social media marketing image" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
         </article>
     </section>
@@ -67,27 +76,33 @@
         <!--Lead Generation figure-->
         <figure class="figure">
             <h3>Lead Generation</h3>
-            <img src="images/lead-generation.png" />
+            <img src="images/lead-generation.png" 
+                alt="lead generation icon" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
             </p>
         </figure>
 
         <!--Brand Awareness figure-->
         <figure class="figure">
             <h3>Brand Awareness</h3>
-            <img src="images/brand-awareness.png" />
+            <img src="images/brand-awareness.png" 
+                alt="brand awareness icon" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
         </figure>
 
         <!--Cost Management figure-->
         <figure class="figure">
             <h3>Cost Management</h3>
-            <img src="images/cost-management.png"></img>
+            <img src="images/cost-management.png" 
+                alt="cost management icon" />
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
         </figure>
     </aside>
